--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,7 @@
       <div class="container-fluid">
         <div class="row">
           <div id="headerbnr" class="col rounded-top">        
-            <h1 class="text-center"><img src="/images/e_bnr.png" class="img-fluid" alt=""></h1>        
+            <h1 class="text-center"><img src="/images/eportfolio_bnr.png" class="img-fluid" alt=""></h1>        
           </div>
         </div>
       </div>
@@ -24,7 +24,7 @@
 
        <!--navbar-->
     <nav id="navtxt" class="navbar sticky-top navbar-expand-sm navbar-dark rounded-bottom">
-      <a class="navbar-brand" href="index.html">HOME</a>
+      <a class="navbar-brand ml-3" href="index.html">HOME</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -134,7 +134,7 @@
               </div>
             </div>
             <br>
-            <hr style="width:100%"> 
+            <hr style="width:85%"> 
         
             <!--seconmain-->
             <br>
@@ -166,15 +166,13 @@
       </div>
       <br>
       <br>
-      <hr style="width:65%">
+      <hr style="width:50%">
       <br>
        <!--bottom-->
             <div  class="container">
               <br>
               <br>                 
-              <h1 class="display-5 text-center ">Thank you for browsing this page!</h1>
-              <br>
-              <br>  
+              <h2 class="display-5 text-center ">Thank you for browsing this page!</h2>  
               <br>
               <br>
               <br>                
@@ -183,8 +181,6 @@
                 Have a wonderful day.<br>
                 Best Regards.
               </p>      
-              <br>
-              <br>
               <br>
               </div>    
       </div>
