--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
                         <li>
                           <ul>
                             <li>Visual Studio Code IDE</li>
-                            <li>HTML Backbone</li>
-                            <li>CSS Styles</li>
+                            <li>HTML & CSS Styles</li>
                             <li>Bootstrap Framework</li>
+                            <li>AGILE & SCRUM Methodology</li>
                           </ul>
                         </li>
                       </ul>
@@ -314,7 +314,6 @@
 
           <!--bottom-->
           <div class="container">
-            <br>
             <br>                 
             <h3 class="display-5 text-center">Thank you for browsing this page!</h3> 
             <br>
