--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 <li class="media my-4">
                   <img src="/images/media_responsive.png" class="img-fluid mr-5" alt="arrow icon">
                   <div class="media-body">
-                    <h5 class="mt-0 mb-1"><u><span class="notranslate">Responsive</span></u></h5>
+                    <h5 class="mt-0 mb-1"><span class="notranslate">Responsive</span></h5>
                     <p>Responsive Web Design is about using HTML and CSS to automatically resize, hide, shrink, or enlarge, a website, to make it looks good on all devices from desktops to tablets and smartphones.
                     <br>
                     This page will resize automatically if the browser shrunks or if viewed on a smartphone.</p> 
@@ -231,7 +231,7 @@
                 <li class="media my-4">
                   <img src="/images/media_css.png" class="img-fluid mr-5" alt="css icon">
                   <div class="media-body">
-                    <h5 class="mt-0 mb-1"><u>Additional CSS sheet</u></h5>
+                    <h5 class="mt-0 mb-1">Additional CSS sheet</h5>
                     <p>
                      Developers often override or customize default Bootstrap CSS styles when working on web development projects.<br>
                      Most developers do it to make changes to Bootstrap fonts, borders, colors, or other Bootstrap styles. 
@@ -244,7 +244,7 @@
                 <li class="media my-4">
                   <img src="/images/media_jscript.png" class="img-fluid mr-5" alt="script icon">
                   <div class="media-body">
-                    <h5 class="mt-0 mb-1"><u>Scripts</u></h5>
+                    <h5 class="mt-0 mb-1">Scripts</h5>
                     <p>A dynamic page can send and updated informations that were not available when the web page was created.
                     <br>
                     Scripts can be viewed as small computer programs written in a variety of scripting languages like JavaScript, VBScript, Perl, PHP, ASP, updating dynamically the page information.
