--- a/aboutme.html
+++ b/aboutme.html
@@ -47,7 +47,7 @@
       <div class="container">
         <br>
         <br>
-        <h1 class="display-4"> A Bit About Me!</h1>
+        <h1 class="display-4">About Me!</h1>
         <br>
         <h5>Hello, my name is Davide Amoroso, Welcome to my eportfolio! </h5>
         <br>
