--- a/index.html
+++ b/index.html
@@ -71,7 +71,16 @@
 
               <!--list-->    
               <div class="container">                
-                <h1 id="cardheader" class="display-5 text-center mb-5 mt-5 pt-5">What i have learnt attending the PHP MySQL training course?</h1>
+                <h1 id="cardheader" class="display-5 text-center mb-5 mt-5 pt-5">What i have learnt attending the PHP MySQL training <a href="" data-toggle="modal" data-target="#myModal">course</a>?</h1>
+                <div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-body">
+                            <img src="/images/course_pop.png" class="img-fluid">
+                        </div>
+                    </div>
+                  </div>
+                </div>
                 <br>
                 <br>
                 <p class="text-center"><u>A quick list of the few development concept and tools i have gone through during the course.</u></p> 
@@ -149,13 +158,13 @@
                     </div>
                     <div class="col pagination justify-content-center">
                       <ul class="list-unstyled">
-                        <h6><u><strong>Database Design</strong></u></h6>
+                        <h6><u><strong>Information Modelling</strong></u></h6>
                         <li>
                           <ul>
-                            <li><a href="https://lipn.univ-paris13.fr/~gerard/docs/cours/merise-slides.pdf">Merise Method</a></li>
-                            <li>MCD Development</li>
-                            <li>MCD to MLD Transition</li>
-                            <li>MLD Implementation</li>
+                            <li><a href="https://www.labri.fr/perso/guibert/DocumentsEnseignement/merise2.pdf">Merise Method</a></li>
+                            <li>Database Development</li>
+                            <li>UML</li>
+                            <li>Structural & Behavioral Diagrams</li>
                           </ul>
                         </li>
                       </ul>
