--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="index.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cambo&display=swap" rel="stylesheet"> 
     <title>Electronic Portfolio</title>
 </head>
 <body  class="user-select-none"> 
@@ -58,7 +58,7 @@
             <br>
             If i had to find an object that define me the best, i could definitely see myself as a Swiss army knife. <br>
             I can be a plus value to projects, bringing not only strong practical skills, but also strong intellectual skills. <br> 
-            I'm an open minded person, i like to explore a broad range of fields, from social to natural, formal sciences. <br>
+            I'm an open minded person, i like to explore a broad range of fields, ranging from social, natural sciences, formal sciences. <br>
             My main field of study relate to the knowledge of the living, i got myself a master degree in molecular and cellular biology.<br>
             I'm also fond of formal sciences, having grown a passion especially toward physics and its modern technology applications. <br>
             I always loved to play with electronic hardware, until i realized i was still missing a big chunk of a bigger picture. <br>
