Edits post merge

--- a/aboutme.html
+++ b/aboutme.html
@@ -66,7 +66,7 @@
             Giving me a better understanding of the digital process as a whole, from the hardware electronic layer to the top software layer. <br>
             Modern electronics nowadays often offer a great range of features which only await to be implemented, that's why i got into software development. <br>  
             On overall, i'm a kind of multidisciplinary person, i like to work with science, technology, expanding their applications in our daily life. <br>
-            That's why the field doesn't matter much to me at the end, if the topic is interesting and challenging enough, i'm always ready to learn. <br>   
+            What matters to me at the end, is the topic being interesting and challenging enough, if so i'm always ready to learn. <br>   
         </p>
         <br>
         <br>
