Fixed resume + text readability

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
               <!--list-->    
               <div class="container-fluid" style="width: 75%">                
-                <h1 id="cardheader" class="display-5 text-center mb-5 mt-5 pt-5"><a href="" data-toggle="modal" data-target="#myModal">What i have learnt attending the Symfony PHP MySQL course ?</a></h1>
+                <h1 id="cardheader" class="display-5 text-center mb-5 mt-5 pt-5"><a href="" data-toggle="modal" data-target="#myModal" class="text-decoration-none">What i have learnt attending the Symfony PHP MySQL course ?</a></h1>
                 <div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                   <div class="modal-dialog">
                     <div class="modal-content">
@@ -90,7 +90,7 @@
                   <div class="row ml-5">
                     <div class="col">
                       <ul class="list-unstyled">
-                        <h6><u><strong><a href="https://symfony.com/">Symfony Framework</a></strong></u></h6>
+                        <h6><u><strong><a href="https://symfony.com/" class="text-decoration-none">Symfony Framework</a></strong></u></h6>
                         <li>
                           <ul>
                             <li>Symfony 5 Development</li>
@@ -188,7 +188,7 @@
                         <h6><u><strong>Information Modelling</strong></u></h6>
                         <li>
                           <ul>
-                            <li><a href="http://bliaudet.free.fr/article.php3?id_article=173">Merise Method</a></li>
+                            <li><a href="http://bliaudet.free.fr/article.php3?id_article=173" class="text-decoration-none">Merise Method</a></li>
                             <li>Database Development</li>
                             <li>UML Standard</li>
                             <li>Structural & Behavioral Diagrams</li>
@@ -308,7 +308,7 @@
               <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
             </ol>
             <div class="carousel-inner">
-              <p class="text-center"><u>A quick list of few popular Web design tools from <a href="https://www.freecodecamp.org/news/web-development-2020/">this</a> article:</u></p> 
+              <p class="text-center"><u>A quick list of few popular Web design tools from <a href="https://www.freecodecamp.org/news/web-development-2020/" class="text-decoration-none">this</a> article:</u></p> 
               <br>
               <div class="carousel-item active">
                 <img src="https://www.freecodecamp.org/news/content/images/2019/12/download--2-.png" class="d-inherit w-30 img-fluid" alt="slide">
@@ -356,7 +356,7 @@
             <br>
             <br>               
             <p class="text-center">
-              Feel free to navigate through the <a href="aboutme.html">About Me</a> and the <a href="resume.html">Resume</a> page.
+              Feel free to navigate through the <a href="aboutme.html" class="text-decoration-none">About Me</a> and the <a href="resume.html" class="text-decoration-none">Resume</a> page.
               <br>
               <br>
               Have a wonderful day.
