--- a/resume.html
+++ b/resume.html
@@ -47,8 +47,7 @@
       <div  class="container">
         <br>
         <br>
-        <br>
-        <h1><a href="https://www.linkedin.com/in/davide-amoroso-39b03a6a/">LinkedIn Profile</a> And Downloadable Resume :</h1>
+        <h1><a href="https://www.linkedin.com/in/davide-amoroso-39b03a6a/" class="text-decoration-none">LinkedIn Profile</a> And Downloadable Resume :</h1>
         <br>
         <br>
         
@@ -73,7 +72,7 @@
           <div class="card mb-3">
             <img src="images/pict_rig.png" class="card-img-top" alt="computer">
             <div class="card-body">
-              <h5 class="card-title">Main Computer Specs And <a href="https://hwbot.org/user/wimpzilla/#My_Submissions">HWBOT Overclocker Profile</a></h5>
+              <h5 class="card-title">Main Computer Specs And <a href="https://hwbot.org/user/wimpzilla/#My_Submissions" class="text-decoration-none">HWBOT Overclocker Profile</a></h5>
               <p class="card-text">CPU: <u>R5 3600@1.46v@4.2hz All Cores</u> // 
                 RAM: <u>16GB DDR4@1900Mhz@C16 1T@1.5v</u> //
                 MB: <u>X370-F Strix</u> //
