--- a/resume.html
+++ b/resume.html
@@ -73,18 +73,19 @@
             <img src="images/pict_rig.png" class="card-img-top" alt="computer">
             <div class="card-body">
               <h5 class="card-title">Main Computer Specs And <a href="https://hwbot.org/user/wimpzilla/#My_Submissions" class="text-decoration-none">HWBOT Overclocker Profile</a></h5>
-              <p class="card-text">CPU: <u>R5 3600@1.46v@4.2hz All Cores</u> // 
-                RAM: <u>16GB DDR4@1900Mhz@C16 1T@1.5v</u> //
-                MB: <u>X370-F Strix</u> //
-                GPU: <u>GTX1080@2152/1300Mhz</u> //
-                STORAGE: <u>NVME SSD 250GB</u> //
-                STORAGE: <u>SATA SSD 250GB</u> //
-                PSU: <u>Corsair 600Watt</u> //
-                COMS: <u>Turtle Beach Headset</u> //
-                COOLING: <u>Custom 120VGA + H100i</u> //
-                RADS: <u>2x 240 AIO Radiators</u> //
-                CASE: <u>MB511 RGB</u> //
-                DISPLAY: <u>Omen 25' 144Hz</u>
+              <p class="card-text list-inlin">
+                <li class="list-inline-item"><span class="text-info">CPU:</span>R5 3600@1.46v@4.15hz All Cores</li>  
+                <li class="list-inline-item"><span class="text-info">RAM:</span>16GB DDR4@1900Mhz@C16 1T@1.5v</li> 
+                <li class="list-inline-item"><span class="text-info">MB:</span>X370-F Strix</li>
+                <li class="list-inline-item"><span class="text-info">GPU:</span>GTX1080@2152/1300Mhz</li>
+                <li class="list-inline-item"><span class="text-info">STORAGE:</span>NVME SSD 250GB</li>
+                <li class="list-inline-item"><span class="text-info">STORAGE:</span>SATA SSD 250GB</li>
+                <li class="list-inline-item"><span class="text-info">PSU:</span>Corsair 600Watt</li>
+                <li class="list-inline-item"><span class="text-info">COMS:</span>Turtle Beach Headset</li>
+                <li class="list-inline-item"><span class="text-info">COOLING:</span>Custom 120VGA + H100i</li>
+                <li class="list-inline-item"><span class="text-info">RADS:</span>2x 240 AIO Radiators</li>
+                <li class="list-inline-item"><span class="text-info">CASE:</span>MB511 RGB</li>
+                <li class="list-inline-item"><span class="text-info">DISPLAY:</span>Omen 25" 144Hz</li>
             </div>
         </div>
         <br>
