--- a/resume.html
+++ b/resume.html
@@ -50,6 +50,7 @@
 
 
 
+
   <!--Accordion wrapper-->
   <div class="accordion" id="accordionExample">
 
@@ -138,7 +139,25 @@
     </div>
     <!--Accordion wrapper-->
 
-
+    <div class="container jmbotxt bg-transparent mb-0">
+      <br>
+      <br>
+      <h1 class="display-5"><a href="https://www.linkedin.com/in/davide-amoroso-39b03a6a/"
+          class="text-decoration-none">LinkedIn
+          Profile Link</a> And Downloadable Resume</h1>
+      <br>
+      <br>
+      <br>
+      <object data="files/da_cv_resume.pdf" type="application/pdf" width="100%" height="500px">
+        <p>It appears you don't have a PDF plugin for this browser.
+          You can <a href="files/da_cv_resume.pdf">click here to
+            download the PDF file.</a></p>
+      </object>
+      <br>
+      <br>
+      <br>
+      <hr style="width:85%">
+    </div>
 
     <!--bottom-->
     <div class="container-fluid jmbotxt">
