--- a/resume.html
+++ b/resume.html
@@ -77,7 +77,7 @@
             <br>
             <br>
             <br>
-            <object data="files/da_cv_resume.pdf" type="application/pdf" width="50%" height="50%">
+            <object data="files/da_cv_resume.pdf" type="application/pdf" width="100%" height="800px">
               <p>It appears you don't have a PDF plugin for this browser.
                 You can <a href="files/da_cv_resume.pdf">click here to
                   download the PDF file.</a></p>
