Scroll function no broke pdf viewer

--- a/resume.html
+++ b/resume.html
@@ -199,6 +199,11 @@
     });
   });
 </script>
-
+<script>
+  //Scroll to the top when accordion open
+  function scrollToTop() {
+    $(window).scrollTop(0);
+  } 
+</script>
 
 </html>
