+/- fixed the pc rig width

--- a/resume.html
+++ b/resume.html
@@ -109,6 +109,9 @@
           <div class="card-body">
 
             <!--Main computer rig-->
+            <div class="container">
+              <br>
+              <br> 
             <div class="card mb-3">
               <img src="images/pict_rig.png" class="card-img-top" alt="computer">
               <div class="card-body jmbotxt">
@@ -130,6 +133,7 @@
                   <li class="list-inline-item"><span class="text-info">DISPLAY:</span>Omen 25" 144Hz</li>
               </div>
             </div>
+          </div>
             <br>
             <br>
             <hr style="width:85%">
