--- a/aboutme.html
+++ b/aboutme.html
@@ -131,7 +131,7 @@
         <div class="card-body">
 
           <!--List-->
-          <div class="container-fluid" style="width: 75%">
+          <div class="container">
             <br>
             <br>
             <br>
@@ -140,98 +140,116 @@
             <br>
             <br>
             <div class="container">
-              <div class="row  justify-content-center">
+              <div class="row justify-content-center">
                 <div class="col">
                   <h5 class="mb-3 mt-3"><strong><img src="images/icon_atom.png" alt="atom" style="margin-right: 10px "
                         class="logo img-fluid" width="40px"> Formal Sciences</strong></h5>
-                  <ul class="list-unstyled">
-                    <li><u>General Physics</u></li>
-                    <ul>
-                      <li>Matter Behavior</li>
-                      <li>Bases Of Electromagnetism</li>
-                      <li>Bases Of Quantum Field Theory</li>
-                      <li>Bases Of Space & Time Theory</li>
+                  <div class="row-xs" !important>
+                    <ul class="list-unstyled">
+                      <li><u class="mb-1">General Physics</u></li>
+                      <ul>
+                        <li>Matter Behavior</li>
+                        <li>Bases Of Electromagnetism</li>
+                        <li>Bases Of Quantum Field Theory</li>
+                        <li>Bases Of Space & Time Theory</li>
+                      </ul>
                     </ul>
-                    <br>
-                    <br>
-                    <li><u>Electrical Engineering</u></li>
-                    <ul>
-                      <li>Bases Of Electronics</li>
-                      <li>Bases Of Communication</li>
-                      <li>Bases Of Photolithography</li>
-                      <li>Bases Of Computer Engineering</li>
+                  </div>
+                  <div class="row-xs mb-3 mt-3" !important>
+                    <ul class="list-unstyled">
+                      <li><u class="mb-1">Electrical Engineering</u></li>
+                      <ul>
+                        <li>Bases Of Electronics</li>
+                        <li>Bases Of Communication</li>
+                        <li>Bases Of Photolithography</li>
+                        <li>Bases Of Computer Engineering</li>
+                      </ul>
                     </ul>
-                    <br>
-                    <br>
-                    <li><u>Computer Science</u></li>
-                    <ul>
-                      <li>Bases Of Statistics</li>
-                      <li>Low Level Languages <span class="notranslate">Assembly</span> & C</li>
-                      <li>High Level Languages Java, PHP, MySQL</li>
-                      <li>Bases Of Software QC & QA </li>
-                      <li>Symfony Framework</li>
+                  </div>
+                  <div class="row-xs mb-3 mt-3" !important>
+                    <ul class="list-unstyled">
+                      <li><u class="mb-1">Computer Science</u></li>
+                      <ul>
+                        <li>Bases Of Statistics</li>
+                        <li>Low Level Languages <span class="notranslate">Assembly</span> & C</li>
+                        <li>High Level Languages Java, PHP, MySQL</li>
+                        <li>Bases Of Software QC & QA </li>
+                        <li>Symfony Framework</li>
+                      </ul>
                     </ul>
-                  </ul>
+                  </div>
                 </div>
                 <div class="col">
                   <h5 class="mb-3 mt-3"><strong><img src="images/icon_dna.png" alt="dna" style="margin-right: 10px "
                         class="logo img-fluid" width="20px" height="45px"> Natural Sciences</strong></h5>
-                  <ul class="list-unstyled">
-                    <li><u>Knowledge Of The Living</u></li>
-                    <ul>
-                      <li>Physiology & Cell Biology</li>
-                      <li>Neurosciences & Neurobiology</li>
-                      <li>Genetics & Molecular Biology</li>
-                      <li>Immunology & Microbiology</li>
+                  <div class="row-xs mb-3 mt-3" !important>
+                    <ul class="list-unstyled">
+                      <li><u class="mb-1">Knowledge Of The Living</u></li>
+                      <ul>
+                        <li>Physiology & Cell Biology</li>
+                        <li>Neurosciences & Neurobiology</li>
+                        <li>Genetics & Molecular Biology</li>
+                        <li>Immunology & Microbiology</li>
+                      </ul>
                     </ul>
-                    <br>
-                    <br>
-                    <li><u>Research & Projects</u></li>
-                    <ul>
-                      <li>Organize The Research Project</li>
-                      <li>Search Literature</li>
-                      <li>Review The State Of The Art</li>
-                      <li>Provide Comprehensive Solutions</li>
+                  </div>
+                  <div class="row-xs mb-3 mt-3" !important>
+                    <ul class="list-unstyled">
+                      <li><u class="mb-1">Research & Projects</u></li>
+                      <ul>
+                        <li>Organize The Research Project</li>
+                        <li>Search Literature</li>
+                        <li>Review The State Of The Art</li>
+                        <li>Provide Comprehensive Solutions</li>
+                      </ul>
                     </ul>
-                    <br>
-                    <br>
-                    <li><u>Laboratory Skills</u></li>
-                    <ul>
-                      <li>Lab Environment & Equipment Skills</li>
-                      <li>Lab Behavior & Safety Measures</li>
-                      <li>Experimental Design Skills</li>
-                      <li>Strong Biology Lab Techniques</li>
+                  </div>
+                  <div class="row-xs mb-3 mt-3" !important>
+                    <ul class="list-unstyled">
+                      <li><u class="mb-1">Laboratory Skills</u></li>
+                      <ul>
+                        <li>Lab Environment & Equipment Skills</li>
+                        <li>Lab Behavior & Safety Measures</li>
+                        <li>Experimental Design Skills</li>
+                        <li>Strong Biology Lab Techniques</li>
+                      </ul>
                     </ul>
-                  </ul>
+                  </div>
                 </div>
                 <div class="col">
                   <h5 class="mb-3 mt-3"><strong><img src="images/icon_social.png" alt="dna" style="margin-right: 10px "
                         class="logo img-fluid" width="50px">Social Sciences</strong></h5>
-                  <ul class="list-unstyled">
-                    <li><u>Economics</u></li>
-                    <ul>
-                      <li>Bases Of Business & Markets</li>
-                      <li>Bases Of Marketing & Consumer Behavior</li>
-                      <li>Bases Of Products Development</li>
-                      <li>Bases Of Global Economics</li>
+                  <div class="row-xs" !important>
+                    <ul class="list-unstyled">
+                      <li><u class="mb-1">Economics</u></li>
+                      <ul>
+                        <li>Bases Of Business & Markets</li>
+                        <li>Bases Of Marketing & Consumer Behavior</li>
+                        <li>Bases Of Products Development</li>
+                        <li>Bases Of Global Economics</li>
+                      </ul>
                     </ul>
-                    <br>
-                    <br>
-                    <li><u>Sociology & History</u></li>
-                    <ul>
-                      <li>Bases of Human Kind Evolution</li>
-                      <li>Population Behavior & Evolution</li>
-                      <li>Media & Communication Evolution</li>
+                  </div>
+                  <div class="row-xs mb-3 mt-3" !important>
+                    <ul class="list-unstyled">
+                      <li><u class="mb-1">Sociology & History</u></li>
+                      <ul>
+                        <li>Bases of Human Kind Evolution</li>
+                        <li>Population Behavior & Evolution</li>
+                        <li>Media & Communication Evolution</li>
+                      </ul>
                     </ul>
-                    <br>
-                    <br>
-                    <li><u>Linguistics</u></li>
-                    <ul>
-                      <li>Italian Mother Tongue</li>
-                      <li>French Mother Tongue</li>
-                      <li>English Proficient</li>
+                  </div>
+                  <div class="row-xs mb-3 mt-3" !important>
+                    <ul class="list-unstyled">
+                      <li><u class="mb-1">Linguistics</u></li>
+                      <ul>
+                        <li>Italian Mother Tongue</li>
+                        <li>French Mother Tongue</li>
+                        <li>English Proficient</li>
+                      </ul>
                     </ul>
-                  </ul>
+                  </div>
                 </div>
               </div>
             </div>
