--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="card-body">
 
           <!--List-->
-          <div class="container-fluid" style="width: 75%">
+          <div class="container-fluid">
             <h1 id="cardheader" class="display-5 text-center mb-5 mt-5 pt-5"><a href="" data-toggle="modal"
                 data-target="#myModal" class="text-decoration-none"> What I Have Learnt Attending The Symfony Course
                 ?</a></h1>
@@ -138,8 +138,8 @@
             <br>
             <br>
             <div class="container">
-              <div class="row  justify-content-center">
-                <div class="col">
+              <div class="row">
+                <div class="col-xs">
                   <ul class="list-unstyled">
                     <h6><u><strong><a href="https://symfony.com/" class="text-decoration-none">Symfony
                             Framework</a></strong></u></h6>
@@ -154,7 +154,7 @@
                     </li>
                   </ul>
                 </div>
-                <div class="col">
+                <div class="col-xs">
                   <ul class="list-unstyled">
                     <h6><u><strong>Web Glossary</strong></u></h6>
                     <li>
@@ -167,7 +167,7 @@
                     </li>
                   </ul>
                 </div>
-                <div class="col">
+                <div class="col-xs">
                   <ul class="list-unstyled">
                     <h6><u><strong>Algorithmic</strong></u></h6>
                     <li>
@@ -180,7 +180,7 @@
                     </li>
                   </ul>
                 </div>
-                <div class="col">
+                <div class="col-xs">
                   <ul class="list-unstyled">
                     <h6><u><strong>Web Development</strong></u></h6>
                     <li>
@@ -196,9 +196,8 @@
               </div>
               <br>
               <br>
-              <br>
-              <div class="row">
-                <div class="col">
+              <div class="row justify-content-center">
+                <div class="col-xs">
                   <ul class="list-unstyled">
                     <h6><u><strong>Object Oriented OOP</strong></u></h6>
                     <li>
@@ -211,7 +210,7 @@
                     </li>
                   </ul>
                 </div>
-                <div class="col">
+                <div class="col-xs">
                   <ul class="list-unstyled">
                     <h6><u><strong>PHP</strong></u></h6>
                     <li>
@@ -224,7 +223,7 @@
                     </li>
                   </ul>
                 </div>
-                <div class="col">
+                <div class="col-xs">
                   <ul class="list-unstyled">
                     <h6><u><strong>MySQL</strong></u></h6>
                     <li>
@@ -237,7 +236,7 @@
                     </li>
                   </ul>
                 </div>
-                <div class="col">
+                <div class="col-xs">
                   <ul class="list-unstyled">
                     <h6><u><strong>Information Modelling</strong></u></h6>
                     <li>
@@ -344,15 +343,16 @@
         <div class="card-body">
 
           <!--Media list-->
-          <div class="container">
+          <div class="container text-center">
             <h1 class="display-5 text-center pb-5 mb-5 mt-5 pt-5">Web Features Embedded Into The Page?</h1>
             <p class="text-center"><em>A quick list of the few Web design features embedded into the page:</em></p>
             <br>
             <ul class="list-unstyled">
               <li class="media my-4">
-                <img src="/images/media_responsive.png" class="img-fluid mr-5" alt="arrow icon">
+
                 <div class="media-body">
-                  <h5 class="mt-0 mb-1"><span class="notranslate">Responsive</span></h5>
+                  <h5 class="mt-0 mb-3"><span class="notranslate">Responsive</span></h5>
+                  <img src="/images/media_responsive.png" class="img-fluid mb-3" alt="arrow icon">
                   <p>Responsive Web Design is about using HTML and CSS to automatically resize, hide, shrink, or
                     enlarge, a website.<br>
                     To make it looks good on all devices from desktops going down to tablets and smartphones.
@@ -360,11 +360,11 @@
                     This page will resize automatically if the browser shrunks or if viewed on a smartphone.</p>
                 </div>
               </li>
-              <br>
               <li class="media my-4">
-                <img src="/images/media_css.png" class="img-fluid mr-5" alt="css icon">
+
                 <div class="media-body">
-                  <h5 class="mt-0 mb-1">Additional CSS sheet</h5>
+                  <h5 class="mt-0 mb-3">Additional CSS sheet</h5>
+                  <img src="/images/media_css.png" class="img-fluid mb-3" alt="css icon">
                   <p>
                     Developers often override or customize default Bootstrap CSS styles when working on web development
                     projects.<br>
@@ -376,11 +376,11 @@
                   </p>
                 </div>
               </li>
-              <br>
               <li class="media my-4">
-                <img src="/images/media_jscript.png" class="img-fluid mr-5" alt="script icon">
+
                 <div class="media-body">
-                  <h5 class="mt-0 mb-1">Scripts</h5>
+                  <h5 class="mt-0 mb-3">Scripts</h5>
+                  <img src="/images/media_jscript.png" class="img-fluid mb-3" alt="script icon">
                   <p>A dynamic page can send and update informations that were not available when the web page was
                     created.
                     <br>
