--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <li>
                       <ul>
                         <li>MySQL Statements & Queries</li>
-                        <li>MySQL Views</li>
+                        <li>MySQL Views & Triggers</li>
                         <li>MySQL Server & <span class="notranslate">Workbench</span> Setup</li>
                         <li>MySQL Stored Routines</li>
                       </ul>
